@@ -3290,7 +3290,7 @@
       <options>
 	<option>
 	  <flag>--send-data</flag>
-	  <effect>pre-load the current dataset, R only</effect>
+	  <effect>pre-load the current dataset; see below</effect>
 	</option>
 	<option>
 	  <flag>--quiet</flag>
@@ -3312,9 +3312,10 @@
 	Language names are recognized on a case-insensitive basis.
       </para>
       <para>
-	The <opt>--send-data</opt> option, which is valid only in
-	connection with R, has the effect of making the entire 
-	current gretl dataset available within R.
+	The <opt>--send-data</opt> option is valid only in connection with
+	R and Octave; it has the effect of making the entire current gretl
+	dataset available within the target program, under the name
+	<lit>gretldata</lit>.
       </para>
       <para>
 	See <guideref targ="chap:gretlR"/> for details and examples.
