@@ -32,7 +32,9 @@ void delete_gretl_R_files (void);
 
 int write_gretl_ox_file (const char *buf, gretlopt opt, const char **pfname);
 
-int write_gretl_octave_file (const char *buf, gretlopt opt, const char **pfname);
+int write_gretl_octave_file (const char *buf, gretlopt opt, 
+			     const double **Z, const DATAINFO *pdinfo,
+			     const char **pfname);
 
 void delete_gretl_ox_file (void);
 
