@@ -1,5 +1,8 @@
 version 1.9.5, in progress
 - When building against gtk3, put the plugins into LIBDIR/gretl-gtk3
+- "foreign" command: enable the --send-data option for Octave, in
+  which case the gretl dataset is pre-loaded as a matrix named
+  "gretldata"
 
 2011-02-24 version 1.9.4
 - Change the default random number generator from GLib's 
